<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.android.homemadeEATS.viewmodel.common.AddressViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".views.fragment.common.SetLocationFragment" />

        <LinearLayout
            android:id="@+id/llSavedAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:background="@drawable/rounded_corner"
            android:layout_margin="@dimen/dp_16"
            android:padding="@dimen/dp_8">

            <TextView
                android:id="@+id/tvSaveAs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/sp_18"
                android:textAllCaps="true"
                android:textColor="@color/dark_brown"
                android:layout_marginBottom="@dimen/dp_8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvAddressTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/dark_brown"
                    android:layout_margin="@dimen/dp_8" />

                <TextView
                    android:id="@+id/tvAddressValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/black"
                    android:layout_margin="@dimen/dp_8" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tvStateTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/state"
                        android:textSize="@dimen/sp_16"
                        android:textColor="@color/dark_brown"
                        android:layout_margin="@dimen/dp_8" />

                    <TextView
                        android:id="@+id/tvStateValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_16"
                        android:textColor="@color/black"
                        android:layout_margin="@dimen/dp_8" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tvCityTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:textSize="@dimen/sp_16"
                        android:textColor="@color/dark_brown"
                        android:layout_margin="@dimen/dp_8" />

                    <TextView
                        android:id="@+id/tvCityValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_16"
                        android:textColor="@color/black"
                        android:layout_margin="@dimen/dp_8" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvPincodeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pincode"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/dark_brown"
                    android:layout_margin="@dimen/dp_8" />

                <TextView
                    android:id="@+id/tvPincodeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/black"
                    android:layout_margin="@dimen/dp_8" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvLandmarkTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/landmark"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/dark_brown"
                    android:layout_margin="@dimen/dp_8"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/tvLandmarkValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/black"
                    android:layout_margin="@dimen/dp_8" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llBottomAddressButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16">

                <Button
                    android:id="@+id/btnAddAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@color/dark_brown"
                    android:layout_marginEnd="@dimen/dp_4"
                    android:text="@string/add_new_address" />

                <Button
                    android:id="@+id/btnSelectAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@color/dark_brown"
                    android:layout_marginStart="@dimen/dp_4"
                    android:text="@string/select_address" />
            </LinearLayout>

            <Button
                android:id="@+id/btnContinue"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:background="@color/dark_brown"
                android:text="@string/continue_selected_address" />

        </LinearLayout>
    </RelativeLayout>
</layout>